--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-# requirements.txt
 streamlit
 pandas
-numpy
+numpy==1.23.5
 yfinance
 alpha_vantage
 finnhub-python
@@ -14,7 +13,3 @@ matplotlib
 python-dotenv
 requests
 joblib
-
-# Python runtime version (for Streamlit Cloud)
-# Add a separate file 'runtime.txt' with the line:
-# python-3.10
